# bevy-jam-2

./: .gitignore  Cargo.toml  README.md  wasm_build.ps1
.github/workflows/: release.yaml
src/: boids.rs  camera.rs  inspector.rs  main.rs  math.rs  quadtree.rs  round.rs  viewports.rs
src/ai/: mod.rs  systems.rs
src/ai/bots/: bonehead.rs  brain_dead.rs  coward.rs  hunter.rs  mod.rs  speedy.rs
src/ui/: components.rs  mod.rs  style.rs  systems.rs
wasm/: index.html
