[package]
name = "bevy-jam-2"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
turborand = "0.6.0"
bevy-inspector-egui = "0.12.1"
bevy_prototype_debug_lines = "0.8.1"
leafwing-input-manager = "0.5.2"
bevy_egui = "0.15.1"
bevy-egui-kbgp = "0.7.0"
# itertools was already being pulled in by leafwing-input-manager, might as well use it too.
itertools = "0.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
